lavoro in corso

--- a/00.1/src/app/app.component.html
+++ b/00.1/src/app/app.component.html
@@ -1,2 +1,7 @@
+<button  routerLink="/carta1">carta1 nome</button>
+<button  routerLink="/carta2">carta2 nome</button>
+<button  routerLink="/carta3">carta3 nome</button>
+<button  routerLink="/carta4">carta4 nome</button>
+<button  routerLink="/carta5">carta5 nome</button>
 
 <router-outlet></router-outlet>
