--- a/00.1/src/app/app.component.html
+++ b/00.1/src/app/app.component.html
@@ -4,9 +4,9 @@
 </div>
 
 
-<button  routerLink="/card/black-lotus">black lotus</button>
+<button  routerLink="/card/quandrix-command">Quandrix Command</button>
 <button  routerLink="/card/unknown-shores">Unknown Shores</button>
-<button  routerLink="/card/sócrates,-profesor-ateniense">Sócrates, profesor ateniense</button>
+<button  routerLink="/card/temur-banner">Temur Banner</button>
 <button  routerLink="/card/the-one-ring">The One Ring</button>
 <button  routerLink="/card/tishana's-tidebinder">Tishana's Tidebinder</button>
 
