--- a/00.1/src/app/app.component.html
+++ b/00.1/src/app/app.component.html
@@ -1,13 +1,16 @@
-<div>
-  <input [(ngModel)]="searchTerm" placeholder="cerca una carta"/>
-  <button (click)="search()">cerca!</button>
+<div class="container" align = "center">
+  <input class ="navbar" [(ngModel)]="searchTerm" placeholder="cerca una carta"/>
+  <div >
+    <button (click)="search()" type="button" class="btn btn-info">cerca!</button>
+  </div>
 </div>
+<br>
 
-
-<button  routerLink="/card/quandrix-command">Quandrix Command</button>
-<button  routerLink="/card/unknown-shores">Unknown Shores</button>
-<button  routerLink="/card/temur-banner">Temur Banner</button>
-<button  routerLink="/card/the-one-ring">The One Ring</button>
-<button  routerLink="/card/tishana's-tidebinder">Tishana's Tidebinder</button>
-
-<router-outlet></router-outlet>
+<div class="container" align = "center">
+  <button  routerLink="/card/quandrix-command">Quandrix Command</button>
+  <button  routerLink="/card/unknown-shores">Unknown Shores</button>
+  <button  routerLink="/card/temur-banner">Temur Banner</button>
+  <button  routerLink="/card/the-one-ring">The One Ring</button>
+  <button  routerLink="/card/tishana's-tidebinder">Tishana's Tidebinder</button>
+</div>
+<router-outlet ></router-outlet>
